--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "combining-data-fetching-strategies",
-  "repository": "https://github.com/vercel/examples.git",
+  "name": "weather_app_cookies",
+  "repository": "https://github.com/jeas560/weather_app_cookies",
   "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@vercel/examples-ui": "^1.0.5",
@@ -25,6 +27,7 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "turbo": "^1.8.3",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "jest": "^29.6.2"
   }
 }
