--- a/package.json
+++ b/package.json
@@ -13,21 +13,23 @@
   },
   "dependencies": {
     "@vercel/examples-ui": "^1.0.5",
+    "js-cookie": "^3.0.5",
     "next": "canary",
     "react": "latest",
     "react-dom": "latest",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "17.0.14",
     "@types/react": "latest",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-next": "canary",
+    "jest": "^29.6.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "turbo": "^1.8.3",
-    "typescript": "4.5.5",
-    "jest": "^29.6.2"
+    "typescript": "4.5.5"
   }
 }
