--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "canary",
     "react": "latest",
     "react-dom": "latest",
+    "react-toastify": "^10.0.4",
     "swr": "^1.3.0"
   },
   "devDependencies": {
